--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main{
 }
 
 header{
-    margin-top: 25px 0;
+    margin: 25px 0;
 
     width: 100%;
     position: relative;
@@ -214,7 +214,7 @@ footer{
 
 @media (max-width: 1150px) {
     :root{
-        font-size: 18px;
+        font-size: 20px;
     }
 
     header i{
