--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ main{
 header{
     margin: 25px 0;
 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
     position: relative;
 }
@@ -59,6 +62,7 @@ header h1{
     text-align: center;
     text-decoration: underline;
     flex: 1;
+    max-width: 1000px;
 }
 
 header i{
@@ -223,6 +227,10 @@ footer{
 }
 
 @media (max-width: 768px) {
+    header h1{
+        font-size: 2rem;
+    }
+
     form{
         flex-direction: column;
     }
